
Codecrypt ChangeLog

1.5

- add hashfile support with -S
- gf2m log/antilog saving, and several other speedups
- switched to icase matching for key names

1.4.1

- compile on windows
- cleanup some code, clarify&be helpful on the `-a' option
- prevent possible memory corruption on FMTSeq mangled privkeys
- prevent keyring corruption by interrupted write
- make keyring backups and don't do unnecessary writes

1.4

- add Cubehash, spawn all algorithms using only Cubehash
- make crypto++ dependency optional
- cubehash256 is now used for KeyIDs instead of SHA256
- bump message and keyring version strings

1.3.1

- get rid of bundled hash sources and licensing problems

1.3

- fix too aggressive locking of keyring that caused deadlocks on piping
- fix many warnings and code inconsistencies
- correct licensing information from ccr --version
- prevent possible problems with forged sencode
- add this helpful changelog :)

1.2

- improve arcfour usage (much stuff is thus incompatible with older versions)
- added a manual page
- added H20 variants of FMTSeq (they provide more than 1M signatures)

1.1

- several speed improvements (colex ranking and MceQD decoding)
- cleanup of some unneeded parts

1.0

- key naming fixes
- add 2^192-secure algorithm variants
- improve message padding for encryption (incompatible with previous format)

0.9

- first released version
